--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,3 +53,6 @@ flutter:
   #
   # For details regarding fonts in packages, see
   # https://flutter.dev/custom-fonts/#from-packages
+
+executables:
+  scaffold: scaffold
